--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ nav{
     z-index:10;
 }
 
-
 /*Background characteristics*/
 .container{
     overflow-y:scroll;
@@ -79,8 +78,8 @@ nav{
     
     #role{
         position:relative;
-        top:15%;
-        font-size: 2.23rem;
+        top:17%;
+        font-size: 2.7rem;
         font-family:'Jost';
         font-weight: normal;
         margin-right:0;
@@ -101,7 +100,7 @@ nav{
         #name{
             position:relative;
             top:25%;
-            font-size: 13vw;
+            font-size: 13.2vw;
             font-family:'Jost';
             font-weight: normal;
             margin-right:0;
@@ -122,8 +121,8 @@ nav{
         
         #role{
             position:relative;
-            top:25%;
-            font-size: 4.3vw;
+            top:22%;
+            font-size: 5.2vw;
             font-family:'Jost';
             font-weight: normal;
             margin-right:0;
@@ -140,10 +139,6 @@ nav{
             from{width: 0;}
             to{width: 726px;}
           }}
-    
-
-
-    
 
 .arrow {
     position: absolute;
@@ -186,7 +181,16 @@ nav{
 
 #intro{
     padding: 0% 10%;
-    background: #f8f8f8
+    background: #f8f8f8;
+    margin-left:1%;
+    margin-right:1%;
+}
+
+
+#about{
+    padding: 0% 10%;
+    background: #f8f8f8;
+    margin:1%;
 }
 
 #about_text{
@@ -194,26 +198,68 @@ nav{
     width: 100%;
     display:flex;
     align-items: center;
-    font-family:''Open Sans', sans-serif';
+    font-family:'Jost';
     font-size: 3.6rem;
     cursor:default
  }   
+
+ #intro_text{
+    height:100vh;
+    width: 100%;
+    display:flex;
+    align-items: center;
+    font-family:'Jost';
+    font-size: 3.6rem;
+    cursor:default
+ }   
+
+
+ #research{
+    padding: 0% 10%;
+    background: #f8f8f8;
+    margin:1%;
+}
+
+ #research_text{
+    height:100vh;
+    width: 100%;
+    display:flex;
+    align-items: center;
+    font-family:'Jost';
+    font-size: 3.6rem;
+    cursor:default
+ }   
+
 
  @media screen and (max-width:1050px){
     #intro{
         padding: 10% 10%;
         height:auto;
     }
-    
     #about_text{
         height:auto;
         font-size:3rem
      }}   
-    
 
- #emoji{
-    font-family:Arial;
-    white-space: nowrap;}
+     @media screen and (max-width:1050px){
+        #about{
+            padding: 10% 10%;
+            height:auto;
+        }
+        #intro_text{
+            height:auto;
+            font-size:3rem
+         }
+         #research{
+            padding: 10% 10%;
+            height:auto;
+        }
+        #research_text{
+            height:auto;
+            font-size:3rem
+        }}
+        
+
 
 .space{
     width:100%;
@@ -314,63 +360,12 @@ img{width:110px; height:60px; object-fit: cover; border-radius: 10%;}
     height:100%;
 }
 
-#logo1{
-    margin-left:.5%;
-    margin-right:.5%;
-    fill: #E0DEDE;
-    text-decoration: none;
-    background-color: #303030;
-    display:inline-block;
-    border-radius: 100%;
-}
-
-#logo2{
-    margin-left:.5%;
-    margin-right:.5%;
-    fill: #E0DEDE;
-    text-decoration: none;
-    background-color: #303030;
-    display:inline-block;
-    border-radius: 100%;
-}
-
-#logo3{
-    margin-left:.5%;
-    margin-right:.5%;
-    fill: #E0DEDE;
-    text-decoration: none;
-    background-color: #303030;
-    display:inline-block;
-    border-radius: 100%;
-
-}
-
-#logo1:hover{
-    fill:white;
-    background-color: black;
-}
-
-#logo2:hover{
-    fill:white;
-    background-color: black;
-}
-
-#logo3:hover{
-    fill:white;
-    background-color: black;
-}
-
 #footertext{
     font-size:1rem;
 }
 
 /***********************************************ABOUT PAGE*/
 
-#about{
-    width:100%;
-    position:relative;
-    background-color:#E0DEDE;
-}
 
 #background{
     width:100%;
