--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ nav{
     height: 100vh;
     width:100%;
     position:relative;
-    background: #E0DEDE;
+    background: #E3E3E3;
 
 }
 
@@ -188,28 +188,11 @@ nav{
 }
 
 
-#about{
-    padding: 0% 10%;
-    background: #f8f8f8;
-    margin:1%;
-}
-
  #research{
     padding: 0% 10%;
     background: #f8f8f8;
     margin:1%;
 }
-
-
-#about_text{
-    height:100vh;
-    width: 100%;
-    display:flex;
-    align-items: center;
-    font-family:'Jost';
-    font-size: 3.6rem;
-    cursor:default
- }   
 
  #intro_text{
     height:100vh;
@@ -217,7 +200,7 @@ nav{
     display:flex;
     align-items: center;
     font-family:'Jost';
-    font-size: 3.6rem;
+    font-size: 3rem;
     cursor:default
  }   
 
@@ -227,7 +210,7 @@ nav{
     display:flex;
     align-items: center;
     font-family:'Jost';
-    font-size: 3.6rem;
+    font-size: 3rem;
     cursor:default
  }   
 
@@ -276,7 +259,7 @@ nav{
     align-content: space-around;
 }
 
-img{width:110px; height:60px; object-fit: cover; border-radius: 10%;}
+.gifs{width:110px; height:60px; object-fit: cover; border-radius: 10%;}
 
 #CV{
     width:500px;
@@ -382,7 +365,6 @@ img{width:110px; height:60px; object-fit: cover; border-radius: 10%;}
     height:500px;
     background: #f8f8f8;
     flex-grow:1;
-    margin-top:1%;
     margin-left:1%;
     margin-bottom:1%;
     margin-right:1%;
@@ -395,7 +377,6 @@ img{width:110px; height:60px; object-fit: cover; border-radius: 10%;}
     background: #f8f8f8;;
     flex-grow:1;
     position: relative;
-    margin-top:1%;
     margin-right:1%;
 
 }
@@ -410,6 +391,7 @@ img{width:110px; height:60px; object-fit: cover; border-radius: 10%;}
     color:black;
     font-size:2rem;
     cursor:default;
+
 }
 
 #rationaletext{
@@ -457,8 +439,11 @@ img{width:110px; height:60px; object-fit: cover; border-radius: 10%;}
     #rationale{
         margin-left:1%;
         margin-bottom:1%;
+        margin-top:1%
     }
     #GS{
         margin-left:1%;
     }
     }
+
+
