--- a/style.css
+++ b/style.css
@@ -435,6 +435,7 @@ nav{
     #education{
         margin-bottom:0%;
         margin-left:1%;
+        margin-top: 1%;
     }
     #rationale{
         margin-left:1%;
