--- a/style.css
+++ b/style.css
@@ -192,6 +192,8 @@ nav{
     padding: 0% 10%;
     background: #f8f8f8;
     margin:1%;
+    align-items: center;
+    text-align: center;
 }
 
  #intro_text{
@@ -208,10 +210,13 @@ nav{
     height:100vh;
     width: 100%;
     display:flex;
-    align-items: center;
     font-family:'Jost';
     font-size: 3rem;
-    cursor:default
+    cursor:default;
+    align-items: center;
+    text-align:left;
+    justify-content: center
+;
  }   
 
 
