--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ nav{
 footer{
     width:100%;
     height: 200px;
-    background-color: #f5f7fa;
+    background-color: white;
     overflow: hidden;
     font-family:'Jost';
 }
