--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{overflow: hidden; 
-    background-color: white;}
+    background-color:#000000}
 
 /************************Landing page*/ 
 
@@ -34,7 +34,7 @@ nav{
 
 .navlist a{
     text-decoration: none;
-    color:black;
+    color: #CDD0DB;
     z-index:10;
 }
 
@@ -50,8 +50,7 @@ nav{
 #home{
     height: 100vh;
     width:100%;
-    position:relative;
-    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);}
+    position:relative}
 
 @media screen and (min-width: 760px){
 
@@ -68,6 +67,7 @@ nav{
         white-space:nowrap;
         overflow:hidden;
         margin:0 auto;
+        color: #CDD0DB
     }
     
     @keyframes nameanime{
@@ -78,7 +78,7 @@ nav{
     #role{
         position:relative;
         top:17%;
-        font-size: 2.7rem;
+        font-size: 2.77rem;
         font-family:'Jost';
         font-weight: normal;
         margin-right:0;
@@ -88,6 +88,7 @@ nav{
         white-space:nowrap;
         overflow:hidden;
         margin:0 auto;
+        color:#CDD0DB
     }
     @keyframes roleanime{
         from{width: 0;}
@@ -110,6 +111,7 @@ nav{
             overflow:hidden;
             margin:0 auto;
             padding-left: 5%;
+            color: #CDD0DB;
             
         }
         
@@ -120,8 +122,8 @@ nav{
         
         #role{
             position:relative;
-            top:22%;
-            font-size: 5.2vw;
+            top:25%;
+            font-size: 5.4vw;
             font-family:'Jost';
             font-weight: normal;
             margin-right:0;
@@ -132,7 +134,7 @@ nav{
             overflow:hidden;
             margin:0 auto;
             padding-left:5%;
-            
+            color: #CDD0DB;
         }
         @keyframes roleanime{
             from{width: 0;}
@@ -146,7 +148,7 @@ nav{
     margin-left: -16px;
     width: 40px;
     height: 40px;
-    border: 2px solid black;
+    border: 2px solid #CDD0DB;
     border-radius: 50%;
     animation: introfadein 5s, arrowbounce 2s infinite 3s;
   }
@@ -160,9 +162,11 @@ nav{
       width: 15px;
       height: 15px;
       content: "";
-      border: 2px solid black;
+      border: 2px solid #CDD0DB;
       border-width: 0px 0 2px 2px;
   }
+
+
 
 @keyframes arrowbounce {
       0%, 40%, 80%, 100%
@@ -181,9 +185,9 @@ nav{
 
 #intro{
     padding: 0% 10%;
-    background: #f5f7fa;
-    margin-left:1%;
-    margin-right:1%;
+    background: #CDD0DB;
+    margin-left:2%;
+    margin-right:2%;
 }
 
 
@@ -196,7 +200,14 @@ nav{
     font-size: 3rem;
     cursor:default;
     text-align: center;
+    color: #000000
  }   
+
+ hr{
+width:5px;
+background-color: red;
+
+ }
 
 
 
@@ -233,20 +244,23 @@ nav{
 
 footer{
     width:100%;
-    height: 200px;
-    background-color: white;
+    height: 30vh;
+    background-color: #000000;
     overflow: hidden;
     font-family:'Jost';
 }
 
+footer p {font-size: 1.5rem;
+}
+
 .ftext{
-    font-size: 1.5 rem;
-    color: black
+    font-size: 2 rem;
+    color: #CDD0DB
 }
 
 .ftext2{
-    font-size: 1.5 rem;
-    color: black;
+    font-size: 2 rem;
+    color: #CDD0DB;
     cursor:default
 }
 
@@ -271,10 +285,32 @@ padding-bottom: 100px;
     color:#02a1c0
     }
 
-.arrow:hover{
-        color:#02a1c0
-        }
-
 .ftext:hover{
         color:#02a1c0
             }
+
+            .arrow:hover {
+                position: absolute;
+                bottom: 30px;
+                left: 50%;
+                margin-left: -16px;
+                width: 40px;
+                height: 40px;
+                border: 2px solid #02a1c0;
+                border-radius: 50%;
+                animation: introfadein 5s, arrowbounce 2s infinite 3s;
+              }
+            
+            .arrow:hover:before {
+                  position: absolute;
+                  top: calc(50% - 11.5px);
+                  left: calc(50% - 8.5px);
+                  transform: rotate(-45deg);
+                  display: block;
+                  width: 15px;
+                  height: 15px;
+                  content: "";
+                  border: 2px solid #02a1c0;
+                  border-width: 0px 0 2px 2px;
+              }
+            
