--- a/style.css
+++ b/style.css
@@ -4,10 +4,24 @@
     box-sizing: border-box
 }
 
-body{overflow: hidden; 
-    background-color:#000000}
+body{
+    background-color:#000000;
+overflow-y: scroll;}
+
+body::-webkit-scrollbar {
+          display: none;
+      }
+      
+
+      body {
+        scrollbar-width: none; 
+        -ms-overflow-style: none;  
+      }
+
+
 
 /************************Landing page*/ 
+
 
 /*Navigation bar*/
 
@@ -40,8 +54,6 @@ nav{
 
 /*Background characteristics*/
 .container{
-    overflow-y:scroll;
-    overflow-x:hidden;
     scroll-behavior: smooth;
     height: 100vh;
     width: 100%;
@@ -186,13 +198,14 @@ nav{
 #intro{
     padding: 0% 10%;
     background: #CDD0DB;
-    margin-left:2%;
-    margin-right:2%;
+    margin-left:1.5%;
+    margin-right:1.5%;
+
 }
 
 
  #intro_text{
-    height:100vh;
+    height:100%;
     width: 100%;
     display:flex;
     align-items: center;
@@ -248,18 +261,17 @@ footer{
     background-color: #000000;
     overflow: hidden;
     font-family:'Jost';
+    padding-bottom: 20%;
 }
 
-footer p {font-size: 1.5rem;
+footer p {font-size: 1.25rem;
 }
 
 .ftext{
-    font-size: 2 rem;
     color: #CDD0DB
 }
 
 .ftext2{
-    font-size: 2 rem;
     color: #CDD0DB;
     cursor:default
 }
