--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 body{
     background-color:#000000;
-overflow-y: scroll;}
+overflow: scroll;
+}
 
 body::-webkit-scrollbar {
           display: none;
@@ -32,8 +33,13 @@ nav{
     white-space:nowrap;
     cursor: default;
     z-index:9;
-    background-color: transparent;
+    transition:transform 2s
 }
+
+
+.nav--hidden {
+    transform: translateY(-200%) translateX(-50%)
+  }
 
 .navlist li{
     display:inline-block;
@@ -50,6 +56,7 @@ nav{
     text-decoration: none;
     color: #CDD0DB;
     z-index:10;
+    background-color: #000000;
 }
 
 /*Background characteristics*/
