--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ nav{
     
     #role{
         position:relative;
-        top:16%;
+        top:20%;
         font-size: 2.77rem;
         font-family:'Jost';
         font-weight: normal;
@@ -118,7 +118,7 @@ nav{
 
         #name{
             position:relative;
-            top:23%;
+            top:25%;
             font-size: 13.2vw;
             font-family:'Jost';
             font-weight: normal;
@@ -207,20 +207,19 @@ nav{
     background: #CDD0DB;
     margin-left:1.5%;
     margin-right:1.5%;
+    height:100%;
+    display:flex;
+    align-items: center;
 
 }
 
 
  #intro_text{
-    height:100%;
-    width: 100%;
-    display:flex;
-    align-items: center;
     font-family:'Jost';
     font-size: 3rem;
     cursor:default;
     text-align: center;
-    color: #000000
+    color: #000000;
  }   
 
 
