--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ nav{
     white-space:nowrap;
     cursor: default;
     z-index:9;
-    transition:transform 2s
+    transition:transform 2s;
 }
 
 
@@ -47,7 +47,7 @@ nav{
     margin-left:20px;
     margin-right:20px;
     margin-top:20px;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-family:'Jost';
     animation: introfadein 5s;
 }
@@ -56,7 +56,8 @@ nav{
     text-decoration: none;
     color: #CDD0DB;
     z-index:10;
-    background-color: #000000;
+    color:black;
+    background-color: yellow;
 }
 
 /*Background characteristics*/
@@ -86,17 +87,18 @@ nav{
         white-space:nowrap;
         overflow:hidden;
         margin:0 auto;
-        color: #CDD0DB
+        color: #CDD0DB;
+        text-align:center
     }
     
     @keyframes nameanime{
         from{width: 0;}
-        to{width: 740px;}
+        to{width: 95%;}
       }
     
     #role{
         position:relative;
-        top:21%;
+        top:22%;
         font-size: 2.77rem;
         font-family:'Jost';
         font-weight: normal;
@@ -107,11 +109,12 @@ nav{
         white-space:nowrap;
         overflow:hidden;
         margin:0 auto;
-        color:#CDD0DB
+        color:#CDD0DB;
+        text-align: center;
     }
     @keyframes roleanime{
         from{width: 0;}
-        to{width: 730px;}
+        to{width: 95%;}
       }}
 
       @media screen and (orientation: portrait){
@@ -131,17 +134,18 @@ nav{
             margin:0 auto;
             padding-left: 5%;
             color: #CDD0DB;
+            text-align:center
             
         }
         
         @keyframes nameanime{
-            from{width: 0px;}
-            to{width: 1500px;}
+            from{width: 0;}
+            to{width: 95%;}
           }
         
         #role{
             position:relative;
-            top:25%;
+            top:22%;
             font-size: 5.4vw;
             font-family:'Jost';
             font-weight: normal;
@@ -154,10 +158,11 @@ nav{
             margin:0 auto;
             padding-left:5%;
             color: #CDD0DB;
+            text-align: center;
         }
         @keyframes roleanime{
             from{width: 0;}
-            to{width: 1500px;}
+            to{width: 95%;}
           }}
 
 .arrow {
@@ -239,14 +244,14 @@ nav{
 
 footer{
     width:100%;
-    height: 30vh;
+    height: 25vh;
     background-color: #000000;
     overflow: hidden;
     font-family:'Jost';
     padding-bottom: 20%;
 }
 
-footer p {font-size: 1.25rem;
+footer p {font-size: 2rem;
 }
 
 .ftext{
