--- a/style.css
+++ b/style.css
@@ -56,8 +56,7 @@ nav{
     text-decoration: none;
     color: #CDD0DB;
     z-index:10;
-    color:black;
-    background-color: yellow;
+    background: #000000;
 }
 
 /*Background characteristics*/
@@ -244,14 +243,14 @@ nav{
 
 footer{
     width:100%;
-    height: 25vh;
+    height: 20vh;
     background-color: #000000;
     overflow: hidden;
     font-family:'Jost';
     padding-bottom: 20%;
 }
 
-footer p {font-size: 2rem;
+footer p {font-size: 1.75rem;
 }
 
 .ftext{
@@ -265,16 +264,16 @@ footer p {font-size: 2rem;
 
 #contact{
 float:left;
-padding-left: 10%;
-padding-top: 50px;
-padding-bottom: 100px;
+padding-left: 3%;
+padding-top: 3%;
+padding-bottom: 10%;
 }
 
 #address{
     float:right;
-    padding-right: 10%;
-    padding-top: 50px;
-    padding-bottom: 100px;
+    padding-right: 3%;
+    padding-top: 3%;
+    padding-bottom: 10%;
     text-align: right;
 }
 
