--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav{
     margin-left:20px;
     margin-right:20px;
     margin-top:20px;
-    font-size: 2rem;
+    font-size: 2vw;
     font-family:'Jost';
     animation: introfadein 5s;
 }
@@ -71,12 +71,10 @@ nav{
     width:100%;
     position:relative}
 
-@media screen and (orientation: landscape){
-
     #name{
         position:relative;
-        top:25%;
-        font-size: 7rem;
+        top:25vh;
+        font-size: 8vw;
         font-family:'Jost';
         font-weight: normal;
         margin-right:0;
@@ -97,8 +95,8 @@ nav{
     
     #role{
         position:relative;
-        top:22%;
-        font-size: 2.77rem;
+        top:22vh;
+        font-size: 3.25vw;
         font-family:'Jost';
         font-weight: normal;
         margin-right:0;
@@ -114,55 +112,13 @@ nav{
     @keyframes roleanime{
         from{width: 0;}
         to{width: 95%;}
-      }}
+      }
 
-      @media screen and (orientation: portrait){
+@media screen and (orientation:portrait) { 
 
-        #name{
-            position:relative;
-            top:25%;
-            font-size: 13.2vw;
-            font-family:'Jost';
-            font-weight: normal;
-            margin-right:0;
-            cursor: default;
-            animation: nameanime 1s steps(12,end) 0.5s 1 normal both;
-            animation-delay:.2s;
-            white-space:nowrap;
-            overflow:hidden;
-            margin:0 auto;
-            padding-left: 5%;
-            color: #CDD0DB;
-            text-align:center
-            
-        }
-        
-        @keyframes nameanime{
-            from{width: 0;}
-            to{width: 95%;}
-          }
-        
-        #role{
-            position:relative;
-            top:22%;
-            font-size: 5.4vw;
-            font-family:'Jost';
-            font-weight: normal;
-            margin-right:0;
-            cursor: default;
-            animation: roleanime 1.5s steps(15,end) 0.5s 1 normal both;
-            animation-delay:1.4s;
-            white-space:nowrap;
-            overflow:hidden;
-            margin:0 auto;
-            padding-left:5%;
-            color: #CDD0DB;
-            text-align: center;
-        }
-        @keyframes roleanime{
-            from{width: 0;}
-            to{width: 95%;}
-          }}
+#role{
+top:24vh}
+}
 
 .arrow {
     position: absolute;
@@ -207,30 +163,33 @@ nav{
 
 
 #intro{
-    padding: 0% 10%;
+    padding: 10% 10%;
     background: #CDD0DB;
-    margin-left:1.5%;
-    margin-right:1.5%;
     height:100%;
     display:flex;
     align-items: center;
+    margin:1%;
 
 }
 
 
  #intro_text{
     font-family:'Jost';
-    font-size: 3rem;
+    font-size: 5vh;
     cursor:default;
     text-align: center;
     color: #000000;
- }   
+ }
+
+ @media screen and (orientation:portrait) { 
+
+    #intro_text{
+    font-size:3.9vw;}
+        
+    }
+    
 
 
-.space{
-    width:100%;
-    height:2%;
-}
 
 #intro2{
     width:100%;
@@ -250,7 +209,7 @@ footer{
     padding-bottom: 20%;
 }
 
-footer p {font-size: 1.75rem;
+footer p {font-size:150%;
 }
 
 .ftext{
@@ -264,14 +223,14 @@ footer p {font-size: 1.75rem;
 
 #contact{
 float:left;
-padding-left: 3%;
+padding-left: 5%;
 padding-top: 3%;
 padding-bottom: 10%;
 }
 
 #address{
     float:right;
-    padding-right: 3%;
+    padding-right: 5%;
     padding-top: 3%;
     padding-bottom: 10%;
     text-align: right;
