--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav{
     margin-left:20px;
     margin-right:20px;
     margin-top:20px;
-    font-size: 2vw;
+    font-size: 4vh;
     font-family:'Jost';
     animation: introfadein 5s;
 }
@@ -209,7 +209,7 @@ footer{
     padding-bottom: 20%;
 }
 
-footer p {font-size:150%;
+footer p {font-size:3vh;
 }
 
 .ftext{
