--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color:#000000;
+    background: radial-gradient(circle, rgba(253,251,251,1) 29%, rgba(235,237,238,1) 78%);
 overflow: scroll;
 }
 
@@ -54,9 +54,9 @@ nav{
 
 .navlist a{
     text-decoration: none;
-    color: #CDD0DB;
+    color: #000000;
     z-index:10;
-    background: #000000;
+    background: #f3ee60;
 }
 
 /*Background characteristics*/
@@ -84,7 +84,7 @@ nav{
         white-space:nowrap;
         overflow:hidden;
         margin:0 auto;
-        color: #CDD0DB;
+        color: #000000;
         text-align:center
     }
     
@@ -96,7 +96,7 @@ nav{
     #role{
         position:relative;
         top:22vh;
-        font-size: 3.25vw;
+        font-size: 3.7vw;
         font-family:'Jost';
         font-weight: normal;
         margin-right:0;
@@ -106,7 +106,7 @@ nav{
         white-space:nowrap;
         overflow:hidden;
         margin:0 auto;
-        color:#CDD0DB;
+        color:#000000;
         text-align: center;
     }
     @keyframes roleanime{
@@ -127,7 +127,7 @@ top:24vh}
     margin-left: -16px;
     width: 40px;
     height: 40px;
-    border: 2px solid #CDD0DB;
+    border: 2px solid #000000;
     border-radius: 50%;
     animation: introfadein 5s, arrowbounce 2s infinite 3s;
   }
@@ -141,7 +141,7 @@ top:24vh}
       width: 15px;
       height: 15px;
       content: "";
-      border: 2px solid #CDD0DB;
+      border: 2px solid #000000;
       border-width: 0px 0 2px 2px;
   }
 
@@ -164,12 +164,10 @@ top:24vh}
 
 #intro{
     padding: 10% 10%;
-    background: #CDD0DB;
+    background: #000000;
     height:100%;
     display:flex;
     align-items: center;
-    margin:1%;
-
 }
 
 
@@ -178,32 +176,20 @@ top:24vh}
     font-size: 5vh;
     cursor:default;
     text-align: center;
-    color: #000000;
- }
+color:#FDFBFB}
 
  @media screen and (orientation:portrait) { 
 
     #intro_text{
-    font-size:3.9vw;}
+    font-size:3.9vw;
+}
         
     }
     
 
-
-
-#intro2{
-    width:100%;
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: space-evenly;
-    align-content: space-around;
-}
-
-
 footer{
     width:100%;
     height: 20vh;
-    background-color: #000000;
     overflow: hidden;
     font-family:'Jost';
     padding-bottom: 20%;
@@ -213,11 +199,11 @@ footer p {font-size:1.5rem;
 }
 
 .ftext{
-    color: #CDD0DB
+    color: #000000
 }
 
 .ftext2{
-    color: #CDD0DB;
+    color: #000000;
     cursor:default
 }
 
@@ -237,35 +223,10 @@ padding-top: 3%;
 /* hover color*/
 
 .navlist a:hover{
-    color:#02a1c0
-    }
+    font-weight: 700;
+}
 
 .ftext:hover{
-        color:#02a1c0
+        font-weight: 700;
             }
 
-            .arrow:hover {
-                position: absolute;
-                bottom: 30px;
-                left: 50%;
-                margin-left: -16px;
-                width: 40px;
-                height: 40px;
-                border: 2px solid #02a1c0;
-                border-radius: 50%;
-                animation: introfadein 5s, arrowbounce 2s infinite 3s;
-              }
-            
-            .arrow:hover:before {
-                  position: absolute;
-                  top: calc(50% - 11.5px);
-                  left: calc(50% - 8.5px);
-                  transform: rotate(-45deg);
-                  display: block;
-                  width: 15px;
-                  height: 15px;
-                  content: "";
-                  border: 2px solid #02a1c0;
-                  border-width: 0px 0 2px 2px;
-              }
-            
