--- a/style.css
+++ b/style.css
@@ -78,13 +78,13 @@ nav{
 .navlist a{
     text-decoration: none;
     color: #000000;
-    box-shadow: inset 0 0 0 0 rgba(177,200,209,.5);
+    box-shadow: inset 0 0 0 0 rgba(231,236,243,.75);
     transition: 1.5s
 }
 
 
 .navlist a:hover{
-    box-shadow: inset 300px 0 0 0 rgba(177,200,209,.5);
+    box-shadow: inset 300px 0 0 0 rgba(231,236,243,.75);
 }
 
 
@@ -367,12 +367,6 @@ height:75%;
     
 }
 
-
-
-
-
-
-
 #third #intro{
     background: #F3EEE7;
     padding-top: 20%;
@@ -560,3 +554,54 @@ color: #F3EEE7;
 .show{
     opacity:1;
 }
+
+.boxes{
+    background-color: red;
+    width:30%;
+    aspect-ratio: 1/1;
+    display: flex;
+    justify-content: center;
+   margin-bottom: 3%;
+   border: 2px solid black;
+   text-align: center;
+   align-items: center;
+}
+
+
+#third #intro{
+    padding-top: 7.5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    height: 160%;
+}
+.boxhold{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.boxes {
+    color: black;
+    padding: 5% 5%;
+    background-color: rgba(231,236,243,1);
+    font-size: 3.5vh;
+}
+
+@media screen and (orientation: portrait){
+ 
+.boxes{
+    width: 75%;
+    aspect-ratio: 1/1;
+}
+
+    .boxhold{
+        flex-direction: column;
+        align-content: center;
+    
+    }
+#third #intro{
+    height:450%;
+}
+}
+
