--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav{
 #main .nav li{
     font-size: 1.25rem;
     font-family:'Jost';
-    animation: introfadein 3s;
+    animation: introfadein 5s;
     height:5%;;
     display: inline;
     padding: 0% .75%;
@@ -96,6 +96,10 @@ nav{
     width: 100%;
 }
 
+#main .container{
+    overflow: hidden;
+}
+
 #main #home{
 height:100vh;
     width:100%;
@@ -112,7 +116,7 @@ background-color: #F3EEE7
         font-weight: normal;
         margin-right:0;
         cursor: default;
-        animation: nameanime 1.2s steps(12,end) 0.5s 1 normal both;
+        animation: nameanime 1.2s steps(12,end) 1s 1 normal both;
         animation-delay:.2s;
         white-space:nowrap;
         overflow:hidden;
@@ -149,54 +153,10 @@ background-color: #F3EEE7
       }
 
 
-
-
-
 @media screen and (orientation:portrait) { 
 
 #role{
 top:20vh}}
-
-.arrow {
-    position: absolute;
-    bottom: 30px;
-    left: 50%;
-    margin-left: -16px;
-    width: 40px;
-    height: 40px;
-    border: 2px solid #000000;
-    border-radius: 50%;
-    animation: introfadein 3s, arrowbounce 2s infinite 3s;
-  }
-
-.arrow::before {
-      position: absolute;
-      top: calc(50% - 11.5px);
-      left: calc(50% - 8.5px);
-      transform: rotate(-45deg);
-      display: block;
-      width: 15px;
-      height: 15px;
-      content: "";
-      border: 2px solid #000000;
-      border-width: 0px 0 2px 2px;
-  }
-
-
-
-@keyframes arrowbounce {
-      0%, 40%, 80%, 100%
-      {transform:translateY(0)}
-      60%
-      {transform: translateY(-25px)}
-      90%
-      {transform: translateY(-5px)}}
-
-@keyframes introfadein{
-    0%{opacity:0}
-    50%{opacity: 0}
-    100%{opacity: 1}
-}
 
 
 #intro{
@@ -369,55 +329,19 @@ height:75%;
 
 #third #intro{
     background: #F3EEE7;
-    padding-top: 20%;
-
 }
-
-
-
-#main #intro_image{
-height:90%;
-width:40%;
-display:flex;
-justify-content: center;
-align-items: center;
-}
-
-#main #intro_img{
-width:90%;
-height:90%;
-object-fit:contain;
-}
-
-
-
-#main #intro_text{
-height:90%;
-width:40%;
-padding-right: 5%;
-font-family: "Jost";
-color:#000000;
-display:flex;
-flex-direction: column;
-justify-content: center;
-font-size: 1.5vw;
-background-color: #F3EEE7;
-}
-
-
 
 
 #third #intro{
-    font-family:'Jost';
-    font-size: 3.5vh;
     cursor:default;
-display: block;
 margin:auto;
+display: flex;
+vertical-align: middle;
 color:#000000}
 
 #third #intro_text{
     font-family:'Jost';
-    font-size: 3.5vh;
+    font-size: 4.5vh;
     cursor:default;
     text-align:center;
 color:#000000}
@@ -541,54 +465,4 @@ color: #F3EEE7;
     opacity:1;
 }
 
-.boxes{
-    background-color: red;
-    width:30%;
-    aspect-ratio: 1/1;
-    display: flex;
-    justify-content: center;
-   margin-bottom: 3%;
-   border: 1.5px solid black;
-   text-align: center;
-   align-items: center;
-}
-
-
-#third #intro{
-    padding-top: 7.5%;
-    padding-left: 5%;
-    padding-right: 5%;
-    height: 160%;
-}
-.boxhold{
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.boxes {
-    color: black;
-    padding: 4% 4%;
-    background-color: #EFF8FF;
-    font-size:1.75vw;
-}
-
-@media screen and (orientation: portrait){
- 
-.boxes{
-    width: 75%;
-    aspect-ratio: 1/1;
-    font-size: 1.5rem;
-}
-
-    .boxhold{
-        flex-direction: column;
-        align-content: center;
-    
-    }
-#third #intro{
-    height:450%;
-}
-}
 
