--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav{
     padding-right: 5%;
     padding-left: 5%;
     text-align: right;
-    background-color: #F3EEE7;
+    background-color: #F1F3F4;
 }
 
 #main .nav li{
@@ -84,13 +84,13 @@ nav{
 .navlist a{
     text-decoration: none;
     color: #000000;
-    box-shadow: inset 0 0 0 0 rgba(239,248,255);
+    box-shadow: inset 0 0 0 0 rgba(198,226,255);
     transition: 1.5s
 }
 
 
 .navlist a:hover{
-    box-shadow: inset 300px 0 0 0 rgba(239,248,255);
+    box-shadow: inset 300px 0 0 0 rgba(198,226,255);
 }
 
 
@@ -100,6 +100,7 @@ nav{
     scroll-behavior: smooth;
     height: 100vh;
     width: 100%;
+    background-color: #F1F3F4;
 }
 
 #main .container{
@@ -110,7 +111,7 @@ nav{
 height:100vh;
     width:100%;
     position:relative;
-background-color: #F3EEE7
+background-color: #F1F3F4
 }
 
 
@@ -166,7 +167,7 @@ top:20vh}}
 
 
 #intro{
-    background: #F3EEE7;
+    background: #F1F3F4;
     display:flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -180,7 +181,7 @@ top:20vh}}
 
 
 #second #intro{
-    background: #F3EEE7;
+    background: "#F1F3F4";
     transition: background .5s;
     font-size: 3.5vh;
     font-family: "Jost";
@@ -191,7 +192,7 @@ top:20vh}}
 }
 
 #second #home{
-    background-color: #F3EEE7;
+    background-color: #F1F3F4;
 }
 
 #second #nav{
@@ -233,13 +234,13 @@ height:75%;
 
 #second #introdiv{
     height:75%;
-    background: #F3EEE7;
+    background: #F1F3F4;
     transition: background .5s;
 
 }
 
 #second #intro2{
-    background: #F3EEE7;
+    background: #F1F3F4;
     height:300%;
     display:flex;
     align-items: center;
@@ -251,7 +252,7 @@ height:75%;
 
 #second #intro2_text{
     padding: 0% 15%;
-    color: #F3EEE7;
+    color: #F1F3F4;
     font-family: "Jost";
     font-size: 4.5vh;
     position: absolute;
@@ -271,7 +272,7 @@ height:75%;
     }
 
     #second #intro{
-        background: #F3EEE7;
+        background: #F1F3F4;
         transition: background .5s;
         font-size: 3.5vh;
         font-family: "Jost";
@@ -320,7 +321,7 @@ height:75%;
     }
     #second #intro2_text{
         padding: 0% 15%;
-        color: #F3EEE7;
+        color: #F1F3F4;
         font-family: "Jost";
         font-size: 4vw;
         position: absolute;
@@ -334,7 +335,7 @@ height:75%;
 }
 
 #third #intro{
-    background: #F3EEE7;
+    background: #F1F3F4;
 }
 
 
@@ -402,7 +403,7 @@ footer{
 }
 
 #second footer{
-    background-color: #F3EEE7;
+    background-color: #F1F3F4;
     transition: background .5s;
 }
 
@@ -411,7 +412,7 @@ footer{
 }
 
 #fourth footer{
-    background-color: #F3EEE7;
+    background-color: #F1F3F4;
 }
 
 
@@ -419,11 +420,11 @@ footer p {font-size:1.25rem;
 }
 
 .ftext{
-    color: #F3EEE7;
+    color: #F1F3F4;
 }
 
 .ftext2{
-    color: #F3EEE7;
+    color: #F1F3F4;
     cursor:default
 }
 
@@ -444,7 +445,7 @@ padding-top: 3%;
 
 
 .aboutlink{
-color: #F3EEE7;
+color: #F1F3F4;
 }
 
 .aboutlink2{
